# ropcatalog

./: .gitignore  README.md  pyproject.toml
ropcatalog/: __main__.py  console.py
ropcatalog/core/: gadgets.py  utils.py
rp_catalog/: __main__.py  console.py
rp_catalog/core/: gadgets.py
src/ropcatalog/: __init__.py  __main__.py  cli.py
src/ropcatalog/core/: console.py  formatters.py  gadgets.py  registers.py  terminal.py  utils.py
tests/: conftest.py  test_cli.py  test_formatters.py  test_gadget.py  test_registers.py  test_terminal.py  test_utils.py
