[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "ropcatalog"
version = "0.9.0"
description = "Finding and classifying ROP gadgets from rp++ output file with some regex and a CLI."
authors = [
    {name = "n3rada"}
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "prompt-toolkit>=3.0.48, <4.0.0",
]

[project.urls]
repository = "https://github.com/n3rada/ropcatalog"

[project.scripts]
ropcatalog = "ropcatalog.cli:main"
