[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "ropcatalog"
version = "0.9.3"
description = "Interactive Python tool for parsing, classifying, and searching ROP gadgets from rp++ output files for Windows exploit development."
authors = [
    {name = "n3rada", email = "72791564+n3rada@users.noreply.github.com"}
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.11,<4.0"

keywords = [
    "rop", "rop-chain", "rop-gadgets", "return-oriented-programming",
    "exploit-development", "exploit", "binary-exploitation",
    "gadget", "x86", "x64", "aslr", "bypass",
    "rp-plus-plus", "offsec", "exp-301", "exp-401",
    "windows", "python", "pentesting",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 only (GPL-3.0-only)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "prompt-toolkit>=3.0.48, <4.0.0",
    "chardet>=7.0.0",
]

[project.urls]
repository = "https://github.com/n3rada/ropcatalog"
homepage = "https://github.com/n3rada/ropcatalog"
documentation = "https://github.com/n3rada/ropcatalog/blob/main/README.md"

[project.scripts]
ropcatalog = "ropcatalog.cli:main"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
